# crowd-data-task

./: README.md  pyproject.toml  run.sh
src/: app.py
src/engine/: postprocessing.py
tests/: test_preprocessing.py
